@@ -22,6 +22,8 @@
 - Fixed issue #13845: Added tests for the __set_state() structs methods.
 - Fixed issue #13853: Added the missing exception
   ezcMvcActionNotFoundException.
+- Fixed issue #13901: Exceptions thrown in controllers are not catched for
+  createFatalRedirectRequest with the configurable dispatcher.
 
 
 1.0alpha1 - Monday 06 October 2008
